--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-nose2==0.8.0
-Pillow==5.3.0
-psycopg2-binary==2.7.5
+asynctest==0.13.0
+nose2==0.9.1
+Pillow==6.1.0
+psycopg2-binary==2.8.3
 pyquery==1.4.0
-pytz==2018.6
+pytz==2019.2
 telepot==12.7
 
