--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       TELEPOT_API_TOKEN:
       EMOJI:
       LOGGING_LEVEL:
-      OUTPUT_LOG_FILE_ENABLED: false
+      OUTPUT_LOG_FILE_ENABLED: "false"
     depends_on:
       - postgres
     logging:
