Use pyTelegramBotAPI instead of telepot

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "REGION": {
       "required": true
     },
-    "TELEPOT_API_TOKEN": {
+    "API_TOKEN": {
       "required": true
     },
     "TZ": {
