--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,17 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+nose2 = "==0.11.0"
+asynctest = "==0.13.0"
 
 [packages]
-asynctest = "==0.13.0"
-nose2 = "==0.11.0"
-psycopg2-binary = "==2.9.3"
+psycopg = "*"
 pyquery = "==1.4.3"
-pytz = "==2021.3"
-telepot = "==12.7"
+pyTelegramBotAPI = "*"
 Pillow = "==9.0.1"
 termcolor = "*"
 pendulum = "*"
+aiohttp = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
