--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       DATABASE_SSLMODE: "disable"
       TZ:
       REGION:
-      TELEPOT_API_TOKEN:
+      API_TOKEN:
       EMOJI:
       LOGGING_LEVEL:
       OUTPUT_LOG_FILE_ENABLED: "false"
