--- a/requirements.txt
+++ b/requirements.txt
@@ -13,28 +13,56 @@
 
 
 -i https://pypi.org/simple
+
 aiohttp==3.8.1
+
 aiosignal==1.2.0; python_version >= '3.6'
+
 async-timeout==4.0.2; python_version >= '3.6'
+
 attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+
 certifi==2021.10.8
+
 charset-normalizer==2.0.12; python_version >= '3'
+
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+
 frozenlist==1.3.0; python_version >= '3.7'
+
 idna==3.3; python_version >= '3'
+
 lxml==4.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+
 multidict==6.0.2; python_version >= '3.7'
+
 pendulum==2.1.2
+
 pillow==9.0.1
+
+psycopg-binary==3.0.12
+
 psycopg-c==3.0.12; sys_platform == 'linux'
+
 psycopg==3.0.12
+
 pyquery==1.4.3
+
 pytelegrambotapi==4.5.1
+
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+
 pytzdata==2020.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+
 requests==2.27.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+
 termcolor==1.1.0
+
 tzdata==2022.1; sys_platform == 'win32'
+
 urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+
 yarl==1.7.2; python_version >= '3.6'
+
