--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3
 
 frozenlist==1.3.0; python_version >= '3.7'
 
+git+https://github.com/eternnoir/pyTelegramBotAPI.git@a2f3cd03e1479fb81764c705658575fc7276fb03#egg=pytelegrambotapi
+
 idna==3.3; python_version >= '3'
 
 lxml==4.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
@@ -47,8 +49,6 @@ psycopg-c==3.0.12; sys_platform == 'linux'
 psycopg==3.0.12
 
 pyquery==1.4.3
-
-pytelegrambotapi==4.5.1
 
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 
